# rusty-journal

./: Cargo.toml  README.md  example.env  test-journal.json
src/: cli.rs  main.rs  tasks.rs
