[package]
name = "rusty-journal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"               # Parse command line argument by defining a struct.
serde_json = "1.0.87"              # A JSON serialization file format
home = "0.5.4"                # Shared definitions of home directories
anyhow = "1.0.66"                                   # Flexible concrete Error type built on std::error::Error
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[dependencies.chrono]
features = ["serde"]  # We're also going to need the serde feature for the chrono crate, so we can serialize the DateTime field.
version = "0.4.22"

[dependencies.serde]  # Add serde in its own section.
features = ["derive"] # We'll need the derive feature.
version = "1.0.147"